--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://rlaclghks123.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/rlaclghks123/portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -26,6 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
